--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ botocore
 python-dotenv
 requests
 psutil
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
